examples/erroneous/semantic_erroneous/overloadedparname.grc
fun main() : nothing

  fun sum(a, a : int) : nothing
    var a, result : int;
  {
    result <- a + b;
    return result;
  }

{
  writeInteger(sum(1,2));
  writeChar('\n');
}
